sql is now runnable. Changed font of console to Courier New.