@@ -39,6 +39,7 @@
                 <configuration>
                     <release>10</release>
                     <compilerArgument>-Xlint:unchecked</compilerArgument>
+                    <compilerArgument>--add-modules=javafx.base</compilerArgument>
                 </configuration>
             </plugin>
             <plugin>
@@ -153,6 +154,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.37</version>
+        </dependency>
+        <dependency>
+            <groupId>de.vandermeer</groupId>
+            <artifactId>asciitable</artifactId>
+            <version>0.3.2</version>
         </dependency>
     </dependencies>
 
